# Reinforcement-Learning-IPD

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: main.yaml
Dokumentation/: PHKA_inf.cls  bibliography.bib  main.aux  main.fdb_latexmk  main.fls  main.tex  pdfa.xmpi
Dokumentation/A) Front Matter/: titlepage.tex
Dokumentation/B) Chapters/: Diskussion.tex  Einleitung.tex  Ergebnisse.tex  Fazit.tex  Hintergrund.tex  Methodik.tex
app/: app.py
app/templates/: index.html
poster/: poster.fdb_latexmk  poster.fls  poster.tex
src/: agents.py  analysis.ipynb  game.py  main.py  tournament.py  train.py
test/: test_agents.py  test_game.py  test_main.py
